# derailed-legacy

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml  dev.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.cfg  sqlx-data.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rewrite.md
.github/workflows/: build_app.yml  build_desktop_app.yml  build_gateway.yml  build_website.yml  stale.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 3281dc6f9c24_.py
api/: Cargo.toml  Dockerfile  __init__.py  app.py  errors.py  flags.py  identity.py  metadata.py  utils.py
api/dgrpc/: __init__.py  gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
api/models/: __init__.py  activity.py  channel.py  guild.py  invites.py  member.py  message.py  read_states.py  role.py  settings.py  user.py
api/refs/: __init__.py  base.py  channel_ref.py  current_guild.py  current_user_ref.py  invite_ref.py  message_ref.py
api/routes/: __init__.py  channel.py  guild.py  invite.py  member.py  message.py  read_state.py  role.py  user.py
api/src/: errors.rs  main.rs  structs.rs
api/src/routes/user/: get_me.rs  mod.rs  register.rs
apps/derailed-app/: index.html  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
auth/: .dockerignore  Cargo.toml  Dockerfile  build.rs
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/derailed/: app.py  (+4 more)
client/: pnpm-lock.yaml
datar/: Cargo.toml
datar/src/: auth.rs  lib.rs  structs.rs
gateway/: Cargo.toml  Dockerfile  README.md  mix.exs
gateway_canary/: app.py  models.py  payloads.py  session.py  stream.py  utils.py
gateway_py/: app.py  presence.py  schemas.py  session.py
legal/: README.md  terms.md
migrations/: 20230326032106_initial.sql
mobile/: app.json  package.json
models/: activity.py  channel.py  guild.py  invites.py  member.py  message.py  read_states.py  role.py  settings.py  user.py
policies/: guidelines.md  privacy.md
protobuf/: gateway.proto
protos/: auth.proto  derailed.proto  gateway.proto
website/: package.json  tailwind.config.cjs
(+262 files in other folders)
