[tool.poetry]
name = "derailed"
version = "0.0.0"
description = ""
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
MarkupSafe = "^2.1.2"
msgspec = "^0.14.1"
itsdangerous = "^2.1.2"
asyncpg = "^0.27.0"
async-lru = "^2.0.2"
bcrypt = "^4.0.1"
gunicorn = "^20.1.0"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
uvloop = { version = "^0.17.0", platform = "linux" }
falcon = "^3.1.1"
socketify = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
