[package]
name = "api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "json", "offline", "time"] }
dotenvy = "0.15.6"
datar = { path = "../datar" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thread-id = "4"
serde_valid = "0.15.0"
bcrypt = "0.14.0"
derive_more = "0.99.17"
tokio = { version = "1.27.0", features = ["full"] }
quote = "1.0.26"
