[package]
name = "datar"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "json", "offline", "time"] }
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
itsdangerous = "0.4.1"
